--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
 
   <!-- Footer -->
   <footer class="text-center py-6 bg-gradient-to-r from-gray-900 to-black border-t border-gray-700">
-    <p class="text-gray-400">© 2025 Anshika Singh • Robotics & AI Enthusiast | Crafted with ❤️ and Tailwind</p>
+    <p class="text-gray-400">© 2025 Anshika Singh • AIML || Web Developer Enthusiast | Crafted with ❤️ 
+      </p>
   </footer>
 
 </body>
