--- a/ml-projects.html
+++ b/ml-projects.html
@@ -102,7 +102,7 @@
 
   <!-- Footer -->
   <footer class="text-center py-6 border-t border-gray-700 bg-gray-900">
-    <p class="text-gray-400">© 2025 Anshika Singh • Powered by ML + Tailwind CSS</p>
+    <p class="text-gray-400">© 2025 Anshika Singh • AIML || Web Developer</p>
   </footer>
 </body>
 </html>
