--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Paste this full HTML replacing your current index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,144 +12,107 @@
 
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-  <!-- Alpine.js -->
-  <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2" defer></script>
-
+  
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    .hover-glow:hover {
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
-    }
   </style>
 </head>
+<body class="bg-white text-gray-900">
 
-<body class="bg-gradient-to-br from-gray-900 via-black to-gray-800 text-white">
-
-  <!-- Header -->
-  <header class="shadow-md py-5 bg-gradient-to-r from-purple-900 via-black to-gray-900 sticky top-0 z-50" x-data="{ open: false }">
-    <div class="container mx-auto px-6 flex justify-between items-center">
-      <h1 class="text-3xl font-bold text-cyan-400 tracking-wide">Anshika Singh</h1>
-      <button @click="open = !open" class="md:hidden text-white focus:outline-none">
-        <svg x-show="!open" xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none"
-             viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-        <svg x-show="open" xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none"
-             viewBox="0 0 24 24" stroke="currentColor" x-cloak>
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M6 18L18 6M6 6l12 12" />
-        </svg>
-      </button>
-
-      <nav class="hidden md:flex space-x-6 text-white font-semibold text-lg">
-        <a href="#" class="hover:text-cyan-300">Home</a>
-        <a href="techstack.html" class="hover:text-cyan-300">Tech Stack</a>
-        <a href="ml-projects.html" class="hover:text-cyan-300">ML Projects</a>
-        <a href="web-projects.html" class="hover:text-cyan-300">Web Projects</a>
-        <a href="certificates.html" class="hover:text-cyan-300">Certificates</a>
-        <a href="contact.html" class="hover:text-cyan-300">Contact</a>
+  <!-- Navbar -->
+  <header class="fixed top-0 left-0 w-full z-50 bg-white shadow-sm">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-cyan-600">Anshika Singh</h1>
+      <nav class="space-x-4 text-gray-700 font-medium">
+        <a href="#" class="hover:text-cyan-500">Home</a>
+        <a href="techstack.html" class="hover:text-cyan-500">Tech Stack</a>
+        <a href="ml-projects.html" class="hover:text-cyan-500">ML Projects</a>
+        <a href="web-projects.html" class="hover:text-cyan-500">Web Projects</a>
+        <a href="certificates.html" class="hover:text-cyan-500">Certificates</a>
+        <a href="contact.html" class="hover:text-cyan-500">Contact</a>
       </nav>
-    </div>
-
-    <!-- Mobile Menu -->
-    <div x-show="open" x-cloak class="md:hidden px-6 pt-4 pb-6 space-y-3 bg-black text-center">
-      <a href="#" class="block text-white hover:text-cyan-300">Home</a>
-      <a href="techstack.html" class="block text-white hover:text-cyan-300">Tech Stack</a>
-      <a href="ml-projects.html" class="block text-white hover:text-cyan-300">ML Projects</a>
-      <a href="web-projects.html" class="block text-white hover:text-cyan-300">Web Projects</a>
-      <a href="certificates.html" class="block text-white hover:text-cyan-300">Certificates</a>
-      <a href="contact.html" class="block text-white hover:text-cyan-300">Contact</a>
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="py-24 text-center bg-gradient-to-r from-indigo-900 via-gray-800 to-gray-900 animate__animated animate__fadeIn">
-    <div class="container mx-auto flex flex-col md:flex-row items-center justify-center gap-12 px-4">
+  <section class="pt-28 pb-20 bg-gray-50">
+    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
       
-      <!-- Text Content -->
-      <div class="md:w-1/2">
-        <h2 class="text-5xl font-extrabold mb-6">
-          Hi, I'm <span class="text-cyan-400">Anshika Singh</span>
+      <!-- Left Text -->
+      <div>
+        <h2 class="text-4xl md:text-5xl font-extrabold text-gray-900 mb-6">
+          Hi, I'm <span class="text-cyan-500">Anshika Singh</span>
         </h2>
-        <p class="text-xl text-gray-300 mb-6 max-w-lg mx-auto">
-          A passionate developer blending <span class="text-purple-400 font-semibold">ML</span>,
-          <span class="text-blue-400 font-semibold">AI</span>, and
-          <span class="text-yellow-300 font-semibold">Web Development</span> using modern tools.
+        <p class="text-lg text-gray-700 mb-6">
+          A passionate developer blending <span class="text-purple-500 font-semibold">ML</span>,
+          <span class="text-blue-500 font-semibold">AI</span>, and
+          <span class="text-yellow-500 font-semibold">Web Development</span> using modern tools.
         </p>
-
-        <!-- Buttons -->
-        <div class="flex flex-col sm:flex-row gap-4 justify-center items-center mb-6">
+        <div class="flex flex-wrap gap-4">
           <a href="assets/assets/images/Anshika Singh final 1).pdf" target="_blank"
-             class="inline-block px-6 py-3 bg-pink-500 hover:bg-pink-600 text-white font-semibold rounded-full transition hover:shadow-lg hover:scale-105 duration-300">
+             class="px-6 py-3 rounded-full bg-cyan-600 text-white hover:bg-cyan-700 transition">
             📄 View Resume
           </a>
           <a href="web-projects.html"
-             class="inline-block px-6 py-3 bg-cyan-500 hover:bg-cyan-600 text-white font-semibold rounded-full transition hover:shadow-lg hover:scale-105 duration-300">
+             class="px-6 py-3 rounded-full border border-cyan-600 text-cyan-600 hover:bg-cyan-50 transition">
             🌐 Web Projects
           </a>
           <a href="ml-projects.html"
-             class="inline-block px-6 py-3 bg-cyan-500 hover:bg-cyan-600 text-white font-semibold rounded-full transition hover:shadow-lg hover:scale-105 duration-300">
+             class="px-6 py-3 rounded-full border border-purple-600 text-purple-600 hover:bg-purple-50 transition">
             🤖 AIML Projects
           </a>
         </div>
       </div>
 
-      <!-- Profile Image -->
-      <div class="md:w-1/3">
+      <!-- Right Image -->
+      <div class="text-center">
         <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh"
-             class="w-64 h-64 rounded-full shadow-2xl border-4 border-cyan-400 object-cover" />
+             class="w-72 h-72 mx-auto rounded-full object-cover border-4 border-cyan-400 shadow-xl" />
       </div>
     </div>
   </section>
 
   <!-- Connect Section -->
-  <section class="py-20 bg-black animate__animated animate__fadeInUp">
-    <div class="container mx-auto px-6">
-      <h3 class="text-4xl font-bold text-center text-cyan-300 mb-12">🔗 Connect with Me</h3>
+  <section class="py-20 bg-white border-t border-gray-100">
+    <div class="max-w-6xl mx-auto px-6">
+      <h3 class="text-3xl font-bold text-center text-cyan-600 mb-12">🔗 Connect with Me</h3>
       <div class="grid md:grid-cols-3 gap-8 text-center">
         
         <!-- GitHub -->
         <a href="https://github.com/Anshika09Singh" target="_blank"
-           class="bg-gradient-to-br from-gray-800 to-gray-900 rounded-2xl p-6 shadow-lg hover:shadow-cyan-400/50 transform hover:-translate-y-2 transition duration-300 hover-glow border border-gray-700">
-          <div class="flex flex-col items-center">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-16 h-16 mb-4" alt="GitHub Logo" />
-            <h4 class="text-xl font-semibold text-white mb-2">GitHub</h4>
-            <p class="text-gray-400 text-sm">Explore my open-source work and projects</p>
-          </div>
+           class="rounded-xl border border-gray-200 p-6 hover:shadow-lg transition">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
+               class="w-14 h-14 mx-auto mb-4" alt="GitHub" />
+          <h4 class="text-xl font-semibold">GitHub</h4>
+          <p class="text-gray-500 text-sm">Explore my open-source work</p>
         </a>
 
         <!-- LinkedIn -->
         <a href="https://www.linkedin.com/in/anshika-singh-031b132a5/" target="_blank"
-           class="bg-gradient-to-br from-blue-900 to-indigo-800 rounded-2xl p-6 shadow-lg hover:shadow-blue-400/50 transform hover:-translate-y-2 transition duration-300 hover-glow border border-gray-700">
-          <div class="flex flex-col items-center">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-16 h-16 mb-4" alt="LinkedIn Logo" />
-            <h4 class="text-xl font-semibold text-white mb-2">LinkedIn</h4>
-            <p class="text-gray-300 text-sm">Connect professionally and view my experience</p>
-          </div>
+           class="rounded-xl border border-gray-200 p-6 hover:shadow-lg transition">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg"
+               class="w-14 h-14 mx-auto mb-4" alt="LinkedIn" />
+          <h4 class="text-xl font-semibold">LinkedIn</h4>
+          <p class="text-gray-500 text-sm">Professional experience & updates</p>
         </a>
 
         <!-- LeetCode -->
         <a href="https://leetcode.com/u/Anshika09singh/" target="_blank"
-           class="bg-gradient-to-br from-yellow-600 to-yellow-700 rounded-2xl p-6 shadow-lg hover:shadow-yellow-300/50 transform hover:-translate-y-2 transition duration-300 hover-glow border border-gray-700">
-          <div class="flex flex-col items-center">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png"
-                 class="w-14 h-14 mb-4 bg-white rounded-full p-1" alt="LeetCode Logo" />
-            <h4 class="text-xl font-semibold text-white mb-2">LeetCode</h4>
-            <p class="text-gray-300 text-sm">Check out my coding practice and challenges</p>
-          </div>
+           class="rounded-xl border border-gray-200 p-6 hover:shadow-lg transition">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png"
+               class="w-12 h-12 mx-auto mb-4 bg-white rounded-full p-1" alt="LeetCode" />
+          <h4 class="text-xl font-semibold">LeetCode</h4>
+          <p class="text-gray-500 text-sm">Practice & challenges</p>
         </a>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center py-6 bg-gradient-to-r from-gray-900 to-black border-t border-gray-700">
-    <p class="text-gray-400">© 2025 Anshika Singh • AIML || Web Developer Enthusiast | Crafted with ❤️ 
-      </p>
+  <footer class="text-center py-6 bg-gray-100 border-t mt-8">
+    <p class="text-gray-500">© 2025 Anshika Singh • AIML & Web Developer | Crafted with ❤️</p>
   </footer>
 
 </body>
