--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- Paste this full HTML replacing your current index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,108 +10,108 @@
 
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  
+
+  <!-- Particles.js -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
   </style>
 </head>
-<body class="bg-white text-gray-900">
+<body class="bg-gradient-to-b from-black via-gray-900 to-gray-800 text-white">
+  <!-- Particles Container -->
+  <div id="particles-js"></div>
 
   <!-- Navbar -->
-  <header class="fixed top-0 left-0 w-full z-50 bg-white shadow-sm">
+  <header class="fixed top-0 left-0 w-full z-50 bg-black/70 backdrop-blur-md">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-cyan-600">Anshika Singh</h1>
-      <nav class="space-x-4 text-gray-700 font-medium">
-        <a href="#" class="hover:text-cyan-500">Home</a>
-        <a href="techstack.html" class="hover:text-cyan-500">Tech Stack</a>
-        <a href="ml-projects.html" class="hover:text-cyan-500">ML Projects</a>
-        <a href="web-projects.html" class="hover:text-cyan-500">Web Projects</a>
-        <a href="certificates.html" class="hover:text-cyan-500">Certificates</a>
-        <a href="contact.html" class="hover:text-cyan-500">Contact</a>
+      <h1 class="text-2xl font-bold text-cyan-400">Anshika Singh</h1>
+      <nav class="space-x-4 text-gray-200 font-medium">
+        <a href="#" class="hover:text-cyan-400 transition">Home</a>
+        <a href="techstack.html" class="hover:text-cyan-400 transition">Tech Stack</a>
+        <a href="ml-projects.html" class="hover:text-cyan-400 transition">ML Projects</a>
+        <a href="web-projects.html" class="hover:text-cyan-400 transition">Web Projects</a>
+        <a href="certificates.html" class="hover:text-cyan-400 transition">Certificates</a>
+        <a href="contact.html" class="hover:text-cyan-400 transition">Contact</a>
       </nav>
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="pt-28 pb-20 bg-gray-50">
-    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-      
-      <!-- Left Text -->
+  <section class="pt-32 pb-20 px-6 animate__animated animate__fadeIn">
+    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
       <div>
-        <h2 class="text-4xl md:text-5xl font-extrabold text-gray-900 mb-6">
-          Hi, I'm <span class="text-cyan-500">Anshika Singh</span>
+        <h2 class="text-4xl md:text-5xl font-extrabold mb-6">
+          Hi, I'm <span class="text-cyan-400">Anshika Singh</span>
         </h2>
-        <p class="text-lg text-gray-700 mb-6">
-          A passionate developer blending <span class="text-purple-500 font-semibold">ML</span>,
-          <span class="text-blue-500 font-semibold">AI</span>, and
-          <span class="text-yellow-500 font-semibold">Web Development</span> using modern tools.
+        <p class="text-lg text-gray-300 mb-6">
+          A passionate developer blending <span class="text-purple-400 font-semibold">ML</span>, <span class="text-blue-400 font-semibold">AI</span>, and <span class="text-yellow-300 font-semibold">Web Development</span> using modern tools.
         </p>
         <div class="flex flex-wrap gap-4">
-          <a href="assets/assets/images/Anshika Singh final 1).pdf" target="_blank"
-             class="px-6 py-3 rounded-full bg-cyan-600 text-white hover:bg-cyan-700 transition">
-            📄 View Resume
-          </a>
-          <a href="web-projects.html"
-             class="px-6 py-3 rounded-full border border-cyan-600 text-cyan-600 hover:bg-cyan-50 transition">
-            🌐 Web Projects
-          </a>
-          <a href="ml-projects.html"
-             class="px-6 py-3 rounded-full border border-purple-600 text-purple-600 hover:bg-purple-50 transition">
-            🤖 AIML Projects
-          </a>
+          <a href="assets/assets/images/Anshika Singh final 1).pdf" target="_blank" class="px-6 py-3 rounded-full bg-pink-600 text-white hover:bg-pink-700 transition">📄 View Resume</a>
+          <a href="web-projects.html" class="px-6 py-3 rounded-full border border-cyan-400 text-cyan-400 hover:bg-cyan-400 hover:text-black transition">🌐 Web Projects</a>
+          <a href="ml-projects.html" class="px-6 py-3 rounded-full border border-yellow-300 text-yellow-300 hover:bg-yellow-300 hover:text-black transition">🤖 AIML Projects</a>
         </div>
       </div>
-
-      <!-- Right Image -->
       <div class="text-center">
-        <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh"
-             class="w-72 h-72 mx-auto rounded-full object-cover border-4 border-cyan-400 shadow-xl" />
+        <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh" class="w-72 h-72 mx-auto rounded-full object-cover border-4 border-cyan-400 shadow-2xl animate__animated animate__zoomIn" />
       </div>
     </div>
   </section>
 
   <!-- Connect Section -->
-  <section class="py-20 bg-white border-t border-gray-100">
-    <div class="max-w-6xl mx-auto px-6">
-      <h3 class="text-3xl font-bold text-center text-cyan-600 mb-12">🔗 Connect with Me</h3>
+  <section class="py-20 px-6">
+    <div class="max-w-6xl mx-auto">
+      <h3 class="text-3xl font-bold text-center text-cyan-300 mb-12">🔗 Connect with Me</h3>
       <div class="grid md:grid-cols-3 gap-8 text-center">
-        
-        <!-- GitHub -->
-        <a href="https://github.com/Anshika09Singh" target="_blank"
-           class="rounded-xl border border-gray-200 p-6 hover:shadow-lg transition">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
-               class="w-14 h-14 mx-auto mb-4" alt="GitHub" />
+        <a href="https://github.com/Anshika09Singh" target="_blank" class="rounded-xl border border-gray-700 p-6 hover:shadow-cyan-500/50 transform hover:-translate-y-1 transition">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-14 h-14 mx-auto mb-4" alt="GitHub" />
           <h4 class="text-xl font-semibold">GitHub</h4>
-          <p class="text-gray-500 text-sm">Explore my open-source work</p>
+          <p class="text-gray-400 text-sm">Explore my open-source work</p>
         </a>
-
-        <!-- LinkedIn -->
-        <a href="https://www.linkedin.com/in/anshika-singh-031b132a5/" target="_blank"
-           class="rounded-xl border border-gray-200 p-6 hover:shadow-lg transition">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg"
-               class="w-14 h-14 mx-auto mb-4" alt="LinkedIn" />
+        <a href="https://www.linkedin.com/in/anshika-singh-031b132a5/" target="_blank" class="rounded-xl border border-gray-700 p-6 hover:shadow-blue-500/50 transform hover:-translate-y-1 transition">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-14 h-14 mx-auto mb-4" alt="LinkedIn" />
           <h4 class="text-xl font-semibold">LinkedIn</h4>
-          <p class="text-gray-500 text-sm">Professional experience & updates</p>
+          <p class="text-gray-400 text-sm">Professional updates</p>
         </a>
-
-        <!-- LeetCode -->
-        <a href="https://leetcode.com/u/Anshika09singh/" target="_blank"
-           class="rounded-xl border border-gray-200 p-6 hover:shadow-lg transition">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png"
-               class="w-12 h-12 mx-auto mb-4 bg-white rounded-full p-1" alt="LeetCode" />
+        <a href="https://leetcode.com/u/Anshika09singh/" target="_blank" class="rounded-xl border border-gray-700 p-6 hover:shadow-yellow-400/50 transform hover:-translate-y-1 transition">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" class="w-12 h-12 mx-auto mb-4 bg-white rounded-full p-1" alt="LeetCode" />
           <h4 class="text-xl font-semibold">LeetCode</h4>
-          <p class="text-gray-500 text-sm">Practice & challenges</p>
+          <p class="text-gray-400 text-sm">Coding practice & challenges</p>
         </a>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center py-6 bg-gray-100 border-t mt-8">
+  <footer class="text-center py-6 bg-black border-t border-gray-800">
     <p class="text-gray-500">© 2025 Anshika Singh • AIML & Web Developer | Crafted with ❤️</p>
   </footer>
 
+  <!-- Particle.js config -->
+  <script>
+    particlesJS("particles-js", {
+      particles: {
+        number: { value: 80 },
+        size: { value: 3 },
+        color: { value: "#00ffff" },
+        move: { enable: true, speed: 1 },
+        line_linked: { enable: true, color: "#00ffff" },
+      },
+      interactivity: {
+        events: {
+          onhover: { enable: true, mode: "repulse" }
+        }
+      }
+    });
+  </script>
 </body>
 </html>
