--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       transform: scale(1.05);
       box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
     }
+    .hover-invert:hover {
+      background-color: white;
+      color: black;
+    }
   </style>
 </head>
 <body class="bg-gradient-to-b from-black via-gray-900 to-gray-800 text-white">
@@ -73,14 +77,17 @@
         <p class="text-lg text-gray-300 mb-6">
           A passionate developer blending <span class="text-purple-400 font-semibold">ML</span>, <span class="text-blue-400 font-semibold">AI</span>, and <span class="text-yellow-300 font-semibold">Web Development</span> using modern tools.
         </p>
+        <p class="text-base text-gray-400 mb-4 leading-relaxed">
+          I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic.. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity.
+        </p>
         <div class="flex flex-wrap gap-4">
           <a href="assets/assets/images/Anshika Singh final 1).pdf" target="_blank" class="px-6 py-3 rounded-full bg-pink-600 text-white hover:bg-pink-700 button-hover">📄 View Resume</a>
-          <a href="web-projects.html" class="px-6 py-3 rounded-full border border-cyan-400 text-cyan-400 hover:bg-cyan-400 hover:text-black button-hover">🌐 Web Projects</a>
+          <a href="web-projects.html" class="px-6 py-3 rounded-full border border-cyan-400 text-cyan-400 hover-invert button-hover">🌐 Web Projects</a>
           <a href="ml-projects.html" class="px-6 py-3 rounded-full border border-yellow-300 text-yellow-300 hover:bg-yellow-300 hover:text-black button-hover">🤖 AIML Projects</a>
         </div>
       </div>
       <div class="text-center">
-        <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh" class="w-60 h-60 md:w-72 md:h-72 mx-auto rounded-full object-cover border-4 border-cyan-400 shadow-2xl animate__animated animate__zoomIn" />
+        <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh" class="w-72 h-72 md:w-80 md:h-80 lg:w-96 lg:h-96 mx-auto rounded-full object-cover border-4 border-cyan-400 shadow-2xl animate__animated animate__zoomIn" />
       </div>
     </div>
   </section>
