--- a/index.html
+++ b/index.html
@@ -74,143 +74,21 @@
     </div>
   </header>
 
-  <!-- Hero Section -->
-  <section class="pt-32 pb-20 px-6 animate__animated animate__fadeIn">
-    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-      <div>
-        <h2 class="text-4xl md:text-5xl font-extrabold mb-6" data-i18n="greeting">Hi, I'm <span class="text-cyan-400">Anshika Singh</span></h2>
-        <p class="text-lg text-gray-300 mb-6" data-i18n="intro">A passionate developer blending <span class="text-purple-400 font-semibold">ML</span>, <span class="text-blue-400 font-semibold">AI</span>, and <span class="text-yellow-300 font-semibold">Web Development</span> using modern tools.</p>
-        <p class="text-base text-gray-400 mb-4 leading-relaxed" data-i18n="values">I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on...</p>
-        <div class="flex flex-wrap gap-4">
-          <a href="assets/assets/images/Anshika Singh final 1).pdf" target="_blank" class="px-6 py-3 rounded-full bg-pink-600 text-white hover:bg-pink-700 button-hover">📄 View Resume</a>
-          <a href="web-projects.html" class="px-6 py-3 rounded-full border border-cyan-400 text-cyan-400 hover-invert button-hover">🌐 Web Projects</a>
-          <a href="ml-projects.html" class="px-6 py-3 rounded-full border border-yellow-300 text-yellow-300 hover:bg-yellow-300 hover:text-black button-hover">🤖 AIML Projects</a>
-        </div>
+  <!-- GitHub + LeetCode Interface -->
+  <section class="py-16 px-6 bg-gray-900">
+    <h2 class="text-3xl font-bold text-center text-cyan-300 mb-12">🔗 GitHub & LeetCode Dashboard</h2>
+    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10">
+      <div class="bg-gray-800 rounded-xl p-6 shadow-lg hover:shadow-cyan-500/50 transition">
+        <h3 class="text-xl font-semibold text-white mb-4">📂 GitHub Contributions</h3>
+        <img src="https://ghchart.rshah.org/Anshika09Singh" alt="GitHub Chart" class="w-full rounded border border-cyan-300">
+        <a href="https://github.com/Anshika09Singh" target="_blank" class="mt-4 inline-block text-cyan-400 hover:underline">Visit GitHub →</a>
       </div>
-      <div class="text-center">
-        <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh" class="w-72 h-72 md:w-80 md:h-80 lg:w-96 lg:h-96 mx-auto rounded-full object-cover border-4 border-cyan-400 shadow-2xl animate__animated animate__zoomIn" />
+      <div class="bg-gray-800 rounded-xl p-6 shadow-lg hover:shadow-yellow-400/50 transition text-center">
+        <h3 class="text-xl font-semibold text-white mb-4">💡 LeetCode Profile</h3>
+        <img src="https://leetcode-badge.vercel.app/?username=Anshika09singh&theme=dark" alt="LeetCode Stats" class="mx-auto rounded border border-yellow-400">
+        <a href="https://leetcode.com/u/Anshika09singh/" target="_blank" class="mt-4 inline-block text-yellow-300 hover:underline">Visit LeetCode →</a>
       </div>
     </div>
   </section>
-
-  <!-- Add custom features like quote generator, AI Mood, or Flip Cards here -->
-
-<!-- 🎯 Developer Quote Generator -->
-<section class="py-16 px-6 bg-gray-900 text-center">
-  <h3 class="text-3xl font-bold text-cyan-300 mb-6">📝 Developer Quote of the Moment</h3>
-  <div id="quoteBox" class="text-xl text-gray-300 italic max-w-3xl mx-auto transition-all duration-300">
-    "Code is like humor. When you have to explain it, it’s bad."
-  </div>
-  <button onclick="generateQuote()" class="mt-6 px-6 py-2 bg-cyan-500 hover:bg-cyan-600 text-white rounded-full transition">New Quote</button>
-</section>
-
-<!-- 🔮 AI Mood Scanner -->
-<section class="py-16 px-6 bg-gray-800 text-center">
-  <h3 class="text-3xl font-bold text-yellow-300 mb-6">🤖 AI Mood Scanner</h3>
-  <button onclick="scanMood()" class="px-6 py-2 bg-yellow-400 hover:bg-yellow-500 text-black font-semibold rounded-full">Scan Brain</button>
-  <p id="moodResult" class="mt-6 text-lg text-gray-200 font-medium transition-all duration-300"></p>
-</section>
-
-<!-- 🔄 Project Flip Cards -->
-<section class="py-20 px-6 bg-gray-900">
-  <h3 class="text-3xl font-bold text-center text-cyan-300 mb-12">📦 Featured Projects (Flip Cards)</h3>
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
-    <div class="[perspective:1000px]">
-      <div class="relative w-full h-64 [transform-style:preserve-3d] transition-transform duration-500 hover:[transform:rotateY(180deg)]">
-        <div class="absolute inset-0 bg-cyan-700 text-white flex items-center justify-center text-xl font-semibold rounded-xl">Smart Horizon</div>
-        <div class="absolute inset-0 bg-white text-black p-4 [transform:rotateY(180deg)] backface-hidden rounded-xl">
-          <h4 class="font-bold text-lg mb-2">Smart Horizon</h4>
-          <p class="text-sm">Brain fitness app with ML-based games & AI quotes.</p>
-        </div>
-      </div>
-    </div>
-    <div class="[perspective:1000px]">
-      <div class="relative w-full h-64 [transform-style:preserve-3d] transition-transform duration-500 hover:[transform:rotateY(180deg)]">
-        <div class="absolute inset-0 bg-purple-600 text-white flex items-center justify-center text-xl font-semibold rounded-xl">NeuroFit</div>
-        <div class="absolute inset-0 bg-white text-black p-4 [transform:rotateY(180deg)] backface-hidden rounded-xl">
-          <h4 class="font-bold text-lg mb-2">NeuroFit</h4>
-          <p class="text-sm">Cognitive Flexibility Trainer with AI integration.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Scripts for Quote & Mood -->
-<script>
-  const quotes = [
-    "Code is like humor. When you have to explain it, it’s bad.",
-    "First, solve the problem. Then, write the code.",
-    "Simplicity is the soul of efficiency.",
-    "Experience is the name everyone gives to their mistakes.",
-    "Programs must be written for people to read."
-  ];
-  function generateQuote() {
-    const quote = quotes[Math.floor(Math.random() * quotes.length)];
-    document.getElementById('quoteBox').innerText = `"${quote}"`;
-  }
-
-  const moods = [
-    "🧠 Focus Mode Activated! Time to build.",
-    "🚀 Creative Mode: New ideas incoming!",
-    "🐞 Debugging Warrior: Bug extermination squad ready.",
-    "⚡️ High Energy: Your brain is at 120%!",
-    "📚 Learning Mode: Absorbing new tech."
-  ];
-  function scanMood() {
-    const mood = moods[Math.floor(Math.random() * moods.length)];
-    document.getElementById('moodResult').innerText = mood;
-  }
-</script>
-
-  <!-- Footer -->
-  <footer class="text-center py-6 bg-black border-t border-gray-800">
-    <p class="text-gray-500">© 2025 Anshika Singh • AIML & Web Developer | Crafted with ❤️</p>
-  </footer>
-
-  <!-- Language Switcher Script -->
-  <script>
-    const translations = {
-      hi: {
-        greeting: "नमस्ते, मैं हूँ <span class='text-cyan-400'>अंशिका सिंह</span>",
-        intro: "एक समर्पित डेवलपर जो <span class='text-purple-400 font-semibold'>एमएल</span>, <span class='text-blue-400 font-semibold'>एआई</span>, और <span class='text-yellow-300 font-semibold'>वेब डेवलपमेंट</span> में काम करता है।",
-        values: "मैं हमेशा समय पर काम जमा करती हूँ और हर परियोजना में जिम्मेदारी और ईमानदारी बनाए रखती हूँ..."
-      },
-      en: {
-        greeting: "Hi, I'm <span class='text-cyan-400'>Anshika Singh</span>",
-        intro: "A passionate developer blending <span class='text-purple-400 font-semibold'>ML</span>, <span class='text-blue-400 font-semibold'>AI</span>, and <span class='text-yellow-300 font-semibold'>Web Development</span> using modern tools.",
-        values: "I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on..."
-      }
-    };
-    document.getElementById('langSwitcher').addEventListener('change', function () {
-      const lang = this.value;
-      document.querySelectorAll('[data-i18n]').forEach(el => {
-        const key = el.getAttribute('data-i18n');
-        if (translations[lang] && translations[lang][key]) {
-          el.innerHTML = translations[lang][key];
-        }
-      });
-    });
-  </script>
-
-  <!-- Particle.js config -->
-  <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: { value: 70 },
-        size: { value: 3 },
-        color: { value: "#00ffff" },
-        move: { enable: true, speed: 1 },
-        line_linked: { enable: true, color: "#00ffff" },
-      },
-      interactivity: {
-        events: {
-          onhover: { enable: true, mode: "repulse" }
-        }
-      }
-    });
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <script>AOS.init();</script>
 </body>
 </html>
