--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div id="particles-js"></div>
 
   <!-- Navbar (fixed version with improved contrast) -->
-  <header class="fixed top-0 left-0 w-full z-50 bg-black/90 backdrop-blur-md shadow-lg">
+  <header class="fixed top-0 left-0 w-full z-[999] bg-black text-white shadow-md">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-cyan-400 flex items-center gap-2">
         <img src="assets/assets/images/Anshika.jpg" alt="Profile Icon" class="w-8 h-8 rounded-full border border-cyan-400" />
